package edu.fiuba.algo3.modelo;

public interface Rango {

    void viajar(Ciudad ciudadOrigen,Ciudad ciudadDestino, Reloj reloj);
}
