@startuml


Rango <|.. Novato
Jugador o--> "1" Rango
Jugador ..> Reloj
Rango ..> Reloj
Rango ..> Ciudad
Posicion "1" --o Ciudad
Ciudad .up.> Posicion


interface Rango {
    {abstract} + viajar(c: Ciudad,  r : Reloj) : void
}


class Novato {
    - velocidad
    + viajar(c: Ciudad,  r : Reloj) : void
}

class Jugador {
    - ciudadActual : Ciudad
    - mision : Mision
    + visitar(edificio:String, r : Reloj): Pista
    + viajar(destino : Ciudad , r : Reloj): void
    + dormir( r : Reloj) : void
    + herir(a : Armar, r : Reloj) : void
}

class Ciudad {
    + tiempoViaje(destino : Ciudad, velocidad : double): double
    - calcularDistanciaCon(ciudad : Ciudad): double
    - calcularDistancia(posicion : Posicion)): double
}

class Posicion {
    - latitud: double
    - longitud: double
    + calcularDistanciaCon(posicion : Posicion): double
    - calcularDistancia(latitud : double, longitud : double): double
}


class Reloj{
    - tiempoTranscurrido: Tiempo
    - tiempoMaximo: Tiempo
    + mostrar() : Tiempo
    + incrementar(tiempo : Tiempo): void
    - verificarTiempoExcedido() : void
}



@enduml

